Fix DCHECK in VaapiJpegDecodeAccelerator::NotifyErrorFromDecoderThread.

This CL fixes the referenced bug by getting rid of the
VaapiJpegDecodeAccelerator::NotifyErrorFromDecoderThread function
entirely and ensuring that VaapiJpegDecodeAccelerator::NotifyError
notifies the client on the expected thread regardless of the thread
from which VaapiJpegDecodeAccelerator::NotifyError is called

Also, adds some documentation.

Bug: 874930
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Id0556da800dd8d93e0c993d69aaa2ae041abf67d
Reviewed-on: https://chromium-review.googlesource.com/1178805
Commit-Queue: Andres Calderon Jaramillo <andrescj@chromium.org>
Reviewed-by: Miguel Casas <mcasas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584103}
Former-commit-id: af572cbd797746cbf48e5173ed4988cdaada360b